<resources>
    <string name="app_name">HD Video Player - All in One</string>
    <string name="back_press_question">Press the back button again to exit</string>
    <string name="allow_for_smooth">Open Setting and Give Manual Permission For Access Camera and Storage For Better and Fast Response</string>
    <string name="permission_denied_title">Permission Denied:</string>
    <string name="coming_soon">Coming soon</string>
    <string name="playlist_has_only_one_song">Playlist has only one song</string>
    <string name="type_in_your_search">Type in your search</string>
    <string name="add_new_song">Add new song</string>
    <string name="add_new_video">Add new video</string>
    <string name="add_song">Add song</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="add_video">Add video</string>
    <string name="empty_music_name">Music name cannot be empty</string>
    <string name="rename">Rename</string>
    <string name="replay">Replay</string>
    <string name="resolution">Resolution</string>
    <string name="resume_video">Resume Video</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_file">Delete file</string>
    <string name="delete_folder">Delete folder</string>
    <string name="delete_from_history">Delete from history</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="delete_song">Delete song</string>
    <string name="delete_video">Delete video</string>
    <string name="question_remove_a_history_video">Are you sure you want to delete this viewed history?</string>
    <string name="question_remove_all_history_video">Are you sure you want to delete all your viewed history?</string>
    <string name="question_remove_file">Are you sure you want to delete the file from your phone permanently? \10 Once deleted, the file cannot be recovered.</string>
    <string name="question_remove_playlist">Are you sure you want to delete this playlist?</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="something_when_wrong">Something when wrong</string>
    <string name="share">Share</string>
    <string name="play">Play</string>
    <string name="play_as_audio">Play as audio</string>
    <string name="play_background">Play background</string>
    <string name="no_videos">No videos</string>
    <string name="no_songs">No songs</string>
    <string name="favorite">Favorites</string>
    <string name="no_viewed_history">No videos watched</string>
    <string name="search_result">Search result</string>
    <string name="all_album">Albums (%d)</string>
    <string name="all_artist">Artists (%d)</string>
    <string name="all_folder">Folders (%d)</string>
    <string name="all_history">Histories (%d)</string>
    <string name="all_music">All Musics (%d)</string>
    <string name="all_playlist">Playlists (%d)</string>
    <string name="all_video">All Videos (%d)</string>
    <string name="album">Albums </string>
    <string name="artist">Artists </string>
    <string name="folder">Folders</string>
    <string name="history">History</string>
    <string name="music">All Musics</string>
    <string name="playlist">Playlists</string>
    <string name="video">All Videos</string>
    <string name="duplicate_name">Duplicate name</string>
    <string name="create_new_playlist">Create new playlist</string>
    <string name="name_the_playlist">Name the duplicate playlist</string>
    <string name="successfully">Successfully</string>
    <string name="empty_playlist_name">Playlist name cannot be empty</string>
    <string name="empty_video_name">Video name cannot be empty</string>
    <string name="notice">Notice</string>
    <string name="auto_play_next">Auto Play Next</string>
    <string name="video_mode">Video Mode</string>
    <string name="recently_added">Recently added</string>
    <string name="remove_from_favorite">Remove from favorite</string>
    <string name="download">Download</string>
    <string name="set_up_pin">Set up PIN</string>
    <string name="input_pin">Input PIN</string>
    <string name="change_pin">Change PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="not_match_pin">PIN does not match</string>
    <string name="invalid_pin">Invalid PIN</string>
    <string name="slide_for_sound">Slide for Sound</string>
    <string name="slide_for_brightness">Slide for Brightness</string>
    <string name="pitch_to_zoom">Pitch to Zoom</string>
    <string name="notice_video_play_error">An error occurred while playing the video. We will fix it as soon as possible?</string>
    <string name="got_it">Got it</string>
    <string name="other_feature">Other features</string>
    <string name="normal">Normal</string>
    <string name="device_not_supported">Device not supported</string>
    <string name="other_feature_content">Cast, repeat mode, night mode, mirror mode, equalizer,…</string>
    <string name="general">General</string>
    <string name="hidden_video">Private folder</string>
    <string name="turn_off">Turn off</string>
    <string name="custom">Custom</string>
    <string name="video_orientation_auto">Auto rotate</string>
    <string name="video_orientation_landscape">Landscape locked</string>
    <string name="video_orientation_portrait">Portrait locked</string>
    <string name="please_let_us_know_what_to_improve_for_this_app">please let us know what to improve for this app</string>
    <string name="submit">submit</string>
    <string name="do_you_like_our_app">Do you like our app ?</string>
    <string name="thank_for_rating">Thank for rating</string>
    <string name="ok">OK</string>
    <string name="unhide_file">Unlock file</string>
    <string name="info">Info</string>
    <string name="duplicate_playlist">Duplicate playlist</string>
    <string name="convert_to_mp3">Convert to mp3</string>
    <string name="hide_file">Lock in private folder</string>
    <string name="volume">Volume</string>
    <string name="total">Total</string>
    <string name="path">Path</string>
    <string name="size">Size</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="input_text">Input text</string>
    <string name="length">Length</string>
    <string name="date">Date</string>
    <string name="error_while_updating_equalizer">Error while updating Equalizer</string>
    <string name="next_in_playlist">Next In Playlist</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="sensor">Sensor</string>
    <string name="next">Next</string>
    <string name="up_next">Up Next</string>
    <string name="up_next_value">Up Next (%ds)</string>
    <string name="video_more_cast">Cast</string>
    <string name="video_more_cut">Cut</string>
    <string name="video_more_favorite">Favorite</string>
    <string name="video_more_hw">Decoder</string>
    <string name="video_more_lock">Lock</string>
    <string name="video_more_mirror">Mirror mode</string>
    <string name="video_more_night_mode">Night mode</string>
    <string name="video_more_no_repeat">No repeat</string>
    <string name="video_more_repeat_all">Repeat all</string>
    <string name="video_more_repeat_one">Repeat one</string>
    <string name="video_more_share">Share</string>
    <string name="video_more_timer">Timer</string>
    <string name="equalizer">Equalizer</string>
    <string name="select_subtitle_file">Select Subtitle file</string>
    <string name="online_subtitle">Online Subtitle</string>
    <string name="color">Color</string>
    <string name="no_subtitle_selected">No subtitle selected</string>
    <string name="none">None</string>
    <string name="minute">Minute</string>
    <string name="hour">Hour</string>
    <string name="no_albums">No albums</string>
    <string name="no_artists">No artists</string>
    <string name="video_trim_done">Cut video successfully. Do you want to play it?</string>
    <string name="no_song_listened">No songs listened</string>
    <string name="install">Install</string>
    <string name="no_hidden_videos">No videos in private folder</string>
    <string name="video_has_been_modified">This video does not exist or has been modified</string>
    <string name="no_subtitles">No subtitles</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_loading">正在加载中...</string>
    <string name="edit">Edit</string>
    <string name="default_message">Check your Internet connection and try again.</string>
    <string name="default_title">No Internet</string>
    <string name="please_turn_on">Please turn on</string>
    <string name="track_selection_title">Sel</string>
    <string name="exo_track_selection_auto">Auto</string>
    <string name="exo_track_selection_none">None</string>
    <string name="exo_track_selection_title_audio">Audio</string>
    <string name="exo_track_selection_title_text">Text</string>
    <string name="exo_track_selection_title_video">Video</string>
    <string name="sort_by">Sort by</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="please_select_a_language">Please select a language</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about">About</string>
    <string name="hd_video_player_all_in_one_is_one_of_the_most_easy_control_video_player_tools_and_it_can_plays_most_multimedia_files_as_well_as_discs_devices_we_ensure_that_your_file_is_played_in_the_original_resolution_through_the_optimization_of_the_encoding_format_file_playback_speed_and_effectiveness_to_achieve_the_best_results">HD Video Player - All in One is one of the most easy control Video Player tools and It can plays most multimedia files as well as discs, devices. We ensure that your file is played in the original resolution, through the optimization of the encoding format file playback speed and effectiveness to achieve the best results.</string>
    <string name="about_app">About</string>
    <string name="exit">Exit</string>
    <string name="are_you_sure_to_want_to_exit">Are You Sure You Want To Exit App?</string>
    <string name="yes_i_like">Yes I Like</string>
    <string name="let_us_know_and_help_us_improve_the_experiance_n_for_users_just_like_you">Let us know and help us improve the experiance\n for users just like you!</string>
    <string name="brightness">Brightness</string>
    <string name="you_haven_t_created_any_playlist">you haven\'t created any playlist</string>
    <string name="allow">Allow</string>
    <string name="no_internet" translatable="false">No Internet connection found. Check your Connection or try again.</string>
    <string name="try_again">Try Again</string>
    <string name="music_player">Musics Player</string>
    <string name="video_player">HD Video Player</string>
    <string name="facebook_app_id">842542450927353</string>
    <string name="please_update_your_app">Please update your app</string>
    <string name="this_app_version_is_no_longer_supported_please_update_your_app_from_the_play_store">This app version is no longer supported. Please update your app from the Play Store.</string>
    <string name="redirect_msg">We have transferred our server, so install our new app by clicking the button below to enjoy the new features of app.</string>
    <string name="update_msg">We have updated the app , so update app by clicking Update Now and enjoy new features.</string>
    <string name="redirect_title">Install our new app now and enjoy</string>
    <string name="update_title">Update app now and enjoy</string>
</resources>