<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet_dialog"
    android:maxHeight="400dp"
    android:orientation="vertical"
    android:paddingStart="26dp"
    android:paddingTop="26dp"
    android:paddingEnd="26dp"
    android:paddingBottom="16dp">

    <View
        android:id="@+id/divider"
        android:layout_width="43dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/divider_dialog" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppin_medium"
        android:text="@string/name"
        android:textColor="@color/color_B0B0B0"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:id="@+id/tv_info_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="3"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="@dimen/_11sdp" />

    <TextView
        android:id="@+id/tv_title_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppin_medium"
        android:text="@string/artist"
        android:textColor="@color/color_B0B0B0"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:id="@+id/tv_info_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_regular"
        android:maxLines="3"
        android:text="@string/artist"
        android:textColor="@color/black"
        android:textSize="@dimen/_11sdp" />

    <TextView
        android:id="@+id/tv_title_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppin_medium"
        android:text="@string/album"
        android:textColor="@color/color_B0B0B0"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:id="@+id/tv_info_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="3"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/album"
        android:textColor="@color/black"
        android:textSize="@dimen/_11sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppin_medium"
        android:text="@string/size"
        android:textColor="@color/color_B0B0B0"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:id="@+id/tv_info_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_regular"
        android:maxLines="3"
        android:text="@string/size"
        android:textColor="@color/black"
        android:textSize="@dimen/_11sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppin_medium"
        android:text="@string/date"
        android:textColor="@color/color_B0B0B0"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:id="@+id/tv_info_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_regular"
        android:maxLines="3"
        android:text="@string/date"
        android:textColor="@color/black"
        android:textSize="@dimen/_11sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppin_medium"
        android:text="@string/length"
        android:textColor="@color/color_B0B0B0"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:id="@+id/tv_info_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="3"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/length"
        android:textColor="@color/black"
        android:textSize="@dimen/_11sdp" />

    <TextView
        android:id="@+id/tv_title_resolution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppin_medium"
        android:text="@string/resolution"
        android:textColor="@color/color_B0B0B0"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:id="@+id/tv_info_resolution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_regular"
        android:maxLines="3"
        android:text="@string/resolution"
        android:textColor="@color/black"
        android:textSize="@dimen/_11sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppin_medium"
        android:text="@string/path"
        android:textColor="@color/color_B0B0B0"
        android:textSize="@dimen/_10sdp" />

    <TextView
        android:id="@+id/tv_info_path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_regular"
        android:maxLines="3"
        android:text="@string/path"
        android:textColor="@color/black"
        android:textSize="@dimen/_11sdp" />
</LinearLayout>
