<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_center_dialog"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/create_new_playlist"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/poppin_medium"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_input_text"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_search"
        android:fontFamily="@font/poppin_medium"
        android:hint="@string/input_text"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_title" />

    <TextView
        android:id="@+id/tv_dialog_ok"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_main"
        android:fontFamily="@font/poppin_medium"
        android:gravity="center"
        android:text="@string/ok"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_input_text" />

    <TextView
        android:id="@+id/tv_dialog_cancel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_ripple_click"
        android:fontFamily="@font/poppin_medium"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_dialog_ok"
        app:layout_constraintTop_toBottomOf="@+id/edt_input_text" />
</androidx.constraintlayout.widget.ConstraintLayout>
